--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -85,12 +85,16 @@
   "Auth Client": "Auth Client",
   "Auth Clients": "Auth Clients",
   "Auth-Clients": "Auth-Clients",
+  "Authentication" : "Authentication",
+  "Authentication Method" : "Authentication Method",
+  "Authentication Type" : "Authentication Type",
   "Auto validate": "Auto validate",
   "Avatar": "Avatar",
   "Back to Login": "Back to Login",
   "Background Color": "Background Color",
   "Basic Search": "Basic Search",
   "Basic": "Basic",
+  "Body" : "Body",
   "Body of the text annotation": "Body of the text annotation",
   "Bold": "Bold",
   "Boolean": "Boolean",
@@ -197,6 +201,7 @@
   "Data Name": "Data Name",
   "Data Preview": "Data Preview",
   "Data Source": "Data Source",
+  "Data Sources": "Data Sources",
   "Data Type": "Data Type",
   "Data": "Data",
   "Database connection failed. Check your database configuration and try again.": "Database connection failed. Check your database configuration and try again.",
@@ -349,6 +354,7 @@
   "Group Permissions Updated Successfully": "Group Permissions Updated Successfully",
   "Group Permissions": "Group Permissions",
   "group": "group",
+  "Headers": "Headers",
   "Groups": "Groups",
   "Height": "Height",
   "Help text is meant to provide additional guidance on the field's value": "Help text is meant to provide additional guidance on the field's value",
@@ -625,6 +631,7 @@
   "Select allowed groups": "Select allowed groups",
   "Select allowed user": "Select allowed user",
   "Select allowed users": "Select allowed users",
+  "Select Authentication Type" : "Select Authentication Type",
   "Select direction of gateway": "Select direction of gateway",
   "Select Direction": "Select Direction",
   "select file": "select file",
@@ -680,6 +687,7 @@
   "Task Notifications": "Task Notifications",
   "Task": "Task",
   "Tasks": "Tasks",
+  "Test": "Test",
   "Text Annotation": "Text Annotation",
   "Text Box": "Text Box",
   "Text Color": "Text Color",
@@ -700,6 +708,7 @@
   "The category was saved.": "The category was saved.",
   "The data name for this field": "The data name for this field",
   "The data name for this list": "The data name for this list",
+  "The datasource name must be distinct" : "The datasource name must be distinct",
   "The data type specifies what kind of data is stored in the variable.": "The data type specifies what kind of data is stored in the variable.",
   "The destination page to navigate to": "The destination page to navigate to",
   "The environment variable name must be distinct.": "The environment variable name must be distinct.",
@@ -799,6 +808,7 @@
   "To Do": "To Do",
   "to": "to",
   "Toggle Style": "Toggle Style",
+  "Token" : "Token",
   "Too many login attempts. Please try again in :seconds seconds.": "Too many login attempts. Please try again in :seconds seconds.",
   "Top": "Top",
   "type here to search": "type here to search",
