Fix display response test endpoint

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -8,6 +8,7 @@
   "# Users": "# Users",
   "+ Add Page": "+ Add Page",
   "72 hours": "72 hours",
+  "Add": "Add",
   "A .env file already exists. Stop the installation procedure, delete the existing .env file, and then restart the installation.": "A .env file already exists. Stop the installation procedure, delete the existing .env file, and then restart the installation.",
   "A variable key name is a symbolic name to reference information.": "A variable key name is a symbolic name to reference information.",
   "About ProcessMaker": "About ProcessMaker",
@@ -293,6 +294,7 @@
   "End Event": "End Event",
   "Ends": "Ends",
   "English (US)": "English (US)",
+  "Enter description": "Enter description",
   "Enter how many seconds the Script runs before timing out (0 is unlimited).": "Enter how many seconds the Script runs before timing out (0 is unlimited).",
   "Enter the expression that describes the workflow condition": "Enter the expression that describes the workflow condition",
   "Enter your email address and we'll send you a reset link.": "Enter your email address and we'll send you a reset link.",
@@ -432,6 +434,7 @@
   "Manually Complete Request": "Manually Complete Request",
   "Message Event Identifier": "Message Event Identifier",
   "Message Flow": "Message Flow",
+  "Method": "Method",
   "Middle": "Middle",
   "MIME Type": "MIME Type",
   "minute": "minute",
@@ -560,6 +563,7 @@
   "Property Edited": "Property Edited",
   "Property Name": "Property Name",
   "Property Saved": "Property Saved",
+  "Purpose": "Purpose",
   "Queue Management": "Queue Management",
   "Radio Button Group": "Radio Button Group",
   "Radio Group": "Radio Group",
@@ -597,6 +601,7 @@
   "requesters": "requesters",
   "Requests": "Requests",
   "Reset": "Reset",
+  "Response": "Response",
   "Restore": "Restore",
   "Rich Text Content": "Rich Text Content",
   "Rich Text": "Rich Text",
@@ -608,6 +613,7 @@
   "Run": "Run",
   "S": "S",
   "Sa": "S",
+  "Sample Data": "Sample Data",
   "Sample Input": "Sample Input",
   "Save Property": "Save Property",
   "Save Screen": "Save Screen",
@@ -841,6 +847,7 @@
   "Username": "Username",
   "Users that should be notified about task events": "Users that should be notified about task events",
   "Users": "Users",
+  "Url": "Url",
   "Valid JSON Data Object": "Valid JSON Data Object",
   "Validation rules ensure the integrity and validity of the data.": "Validation rules ensure the integrity and validity of the data.",
   "Validation Rules": "Validation Rules",
