Add language names

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -398,6 +398,10 @@
   "Lane Above": "Lane Above",
   "Lane Below": "Lane Below",
   "Lane": "Lane",
+  "lang-de" : "German",
+  "lang-en" : "English",
+  "lang-es" : "Spanish",
+  "lang-fr" : "French",
   "Language:": "Language:",
   "Language": "Language",
   "Last Login": "Last Login",
