Add labels watchers

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -380,6 +380,7 @@
   "Information": "Information",
   "initial": "initial",
   "Initially Checked?": "Initially Checked?",
+  "Input Data": "Input Data",
   "Inspector": "Inspector",
   "Installer completed. Consult ProcessMaker documentation on how to configure email, jobs and notifications.": "Installer completed. Consult ProcessMaker documentation on how to configure email, jobs and notifications.",
   "Installing ProcessMaker database, OAuth SSL keys and configuration file.": "Installing ProcessMaker database, OAuth SSL keys and configuration file.",
@@ -436,10 +437,12 @@
   "Modeler": "Modeler",
   "Modified": "Modified",
   "month": "month",
+  "Must be unique": "Must be unique",
   "Multi Column": "Multi Column",
   "Multicolumn / Table": "Multicolumn / Table",
   "My Requests": "My Requests",
   "Name must be distinct": "Name must be distinct",
+  "Name of Variable to store the output": "Name of Variable to store the output",
   "name": "name",
   "Navigation": "Navigation",
   "Never": "Never",
@@ -502,6 +505,7 @@
   "Options": "Options",
   "organization": "organization",
   "Output": "Output",
+  "Output Variable Name": "Output Variable Name",
   "Owner": "Owner",
   "Package installed": "Package installed",
   "Page Name": "Page Name",
@@ -603,6 +607,7 @@
   "Rule": "Rule",
   "Run Script As": "Run Script As",
   "Run script": "Run script",
+  "Run Synchronously": "Run Synchronously",
   "Run": "Run",
   "S": "S",
   "Sa": "S",
@@ -616,6 +621,7 @@
   "Screens": "Screens",
   "Script Config Editor": "Script Config Editor",
   "Script Configuration": "Script Configuration",
+  "Script Source": "Script Source",
   "Script Task": "Script Task",
   "Script that will be executed by the task": "Script that will be executed by the task",
   "Script": "Script",
@@ -632,6 +638,7 @@
   "Select direction of gateway": "Select direction of gateway",
   "Select Direction": "Select Direction",
   "select file": "select file",
+  "Select List": "Select List",
   "Select group or type here to search groups": "Select group or type here to search groups",
   "Select user or type here to search users": "Select user or type here to search users",
   "Select...": "Select...",
@@ -836,13 +843,15 @@
   "Users that should be notified about task events": "Users that should be notified about task events",
   "Users": "Users",
   "Valid JSON Data Object": "Valid JSON Data Object",
+  "Valid JSON Object, Variables Supported": "Valid JSON Object, Variables Supported",
   "Validation rules ensure the integrity and validity of the data.": "Validation rules ensure the integrity and validity of the data.",
   "Validation Rules": "Validation Rules",
   "Validation": "Validation",
   "Value": "Value",
-  "Variable Name": "Variable Name",
   "Variable": "Variable",
   "Variables": "Variables",
+  "Variable Name": "Variable Name",
+  "Variable to Watch": "Variable to Watch",
   "Variant": "Variant",
   "Vertical alignment of the text": "Vertical alignment of the text",
   "View All Requests": "View All Requests",
@@ -861,6 +870,12 @@
   "View Users": "View Users",
   "Visibility Rule": "Visibility Rule",
   "W": "W",
+  "Watcher": "Watcher",
+  "Watchers": "Watchers",
+  "Watcher Name": "Watcher Name",
+  "Watcher Saved": "Watcher Saved",
+  "Watcher Updated": "Watcher Updated",
+  "Watching": "Watching",
   "Wait until specific date/time": "Wait until specific date/time",
   "warning": "warning",
   "We can't find a user with that e-mail address.": "We can't find a user with that e-mail address.",
