--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -2,6 +2,7 @@
   " overdue ": " overdue ",
   " pending": " pending",
   ":user has completed the task :task_name": ":user has completed the task :task_name",
+  "{{variable}} is running.": "{{variable}} is running.",
   "? Any services using it will no longer have access.": "? Any services using it will no longer have access.",
   "[Select Active Process]": "[Select Active Process]",
   "# Processes": "# Processes",
@@ -653,6 +654,7 @@
   "Should records be editable/removable and can new records be added": "Should records be editable/removable and can new records be added",
   "Should the checkbox be checked by default": "Should the checkbox be checked by default",
   "Show in Json Format": "Show in Json Format",
+  "Something has gone wrong.": "Something has gone wrong.",
   "Something went wrong. Try refreshing the application": "Something went wrong. Try refreshing the application",
   "Sorry, this request doesn't contain any information.": "Sorry, this request doesn't contain any information.",
   "Sorry! API failed to load": "Sorry! API failed to load",
@@ -800,6 +802,7 @@
   "This Request is currently in progress.": "This Request is currently in progress.",
   "This screen has validation errors.": "This screen has validation errors.",
   "This screen will be populated once the Request is completed.": "This screen will be populated once the Request is completed.",
+  "This window will automatically close when complete.": "This window will automatically close when complete.",
   "Time expression": "Time expression",
   "Time when the task will due (hours)": "Time when the task will due (hours)",
   "Time Zone": "Time Zone",
@@ -820,6 +823,7 @@
   "Unable to import": "Unable to import",
   "Unauthorized - ProcessMaker": "Unauthorized - ProcessMaker",
   "Undo": "Undo",
+  "Unfortunately this screen has had an issue. We've notified the administrator.": "Unfortunately this screen has had an issue. We've notified the administrator.",
   "Unread Notifications": "Unread Notifications",
   "Update Group Successfully": "Update Group Successfully",
   "Upload Avatar": "Upload Avatar",
