--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -132,6 +132,7 @@
   "Column Widths": "Column Widths",
   "Column": "Column",
   "Comments": "Comments",
+  "Common file types: application/msword, image/gif, image/jpeg, application/pdf, application/vnd.ms-powerpoint, application/vnd.ms-excel, text/plain": "Common file types: application/msword, image/gif, image/jpeg, application/pdf, application/vnd.ms-powerpoint, application/vnd.ms-excel, text/plain",
   "Completed Tasks": "Completed Tasks",
   "Completed" : "Completed",
   "completed": "completed",
@@ -318,8 +319,10 @@
   "Field Value": "Field Value",
   "Field:": "Field:",
   "Fields List": "Fields List",
+  "File Accepted": "File Accepted",
   "File Download": "File Download",
   "File Name": "File Name",
+  "File not allowed": "File not allowed",
   "File Upload": "File Upload",
   "Files (API)": "Files (API)",
   "Files": "Files",
