remove blade edit category remove controller process, screen and script category

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -249,6 +249,7 @@
   "Edit as JSON": "Edit as JSON",
   "Edit Auth Clients": "Edit Auth-Clients",
   "Edit Categories": "Edit Categories",
+  "Edit Category": "Edit Category",
   "Edit Comments": "Edit Comments",
   "Edit Data": "Edit Data",
   "Edit Environment Variable": "Edit Environment Variable",
