Updated english translation strings

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -975,5 +975,7 @@
   "View Translations": "View Translations",
   "String": "String",
   "Reset To Default": "Reset To Default",
-  "Translation": "Translation"
+  "Translation": "Translation",
+  "View Profile": "View Profile",
+  "Requests In Progress": "Requests In Progress"
 }
