Updated language file

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -683,7 +683,7 @@
   "Successfully imported": "Successfully imported",
   "Successfully saved": "Successfully saved",
   "Summary screen that will be displayed when process finish with this End event.": "Summary screen that will be displayed when process finish with this End event.",
-  "Summary screen": "Summary screen",
+  "Screen for Input": "Screen for Input",
   "Summary": "Summary",
   "T": "T",
   "Table": "Table",
@@ -902,7 +902,7 @@
   "You can set CSS Selector names in the inspector. Use them here with [selector='my-selector']": "You can set CSS Selector names in the inspector. Use them here with [selector='my-selector']",
   "You don't currently have any tasks assigned to you": "You don't currently have any tasks assigned to you",
   "You don't have any Processes.": "You don't have any Processes.",
-  "You have {{ inOverDue }} overdue {{ taskText }} pending": "You have {{ inOverDue }} overdue {{ taskText }} pending", 
+  "You have {{ inOverDue }} overdue {{ taskText }} pending": "You have {{ inOverDue }} overdue {{ taskText }} pending",
   "You must have your database credentials available in order to continue.": "You must have your database credentials available in order to continue.",
   "Your account has been timed out for security.": "Your account has been timed out for security.",
   "Your password has been reset!": "Your password has been reset!",
