--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -616,7 +616,7 @@
   "Save Property": "Save Property",
   "Save Screen": "Save Screen",
   "Save": "Save",
-  "Screen For Input": "Screen For Input",
+  "Screen for Input": "Screen for Input",
   "Screen Validation": "Screen Validation",
   "Screen": "Screen",
   "Screens": "Screens",
@@ -683,7 +683,6 @@
   "Successfully imported": "Successfully imported",
   "Successfully saved": "Successfully saved",
   "Summary screen that will be displayed when process finish with this End event.": "Summary screen that will be displayed when process finish with this End event.",
-  "Summary screen": "Summary screen",
   "Summary": "Summary",
   "T": "T",
   "Table": "Table",
@@ -902,7 +901,7 @@
   "You can set CSS Selector names in the inspector. Use them here with [selector='my-selector']": "You can set CSS Selector names in the inspector. Use them here with [selector='my-selector']",
   "You don't currently have any tasks assigned to you": "You don't currently have any tasks assigned to you",
   "You don't have any Processes.": "You don't have any Processes.",
-  "You have {{ inOverDue }} overdue {{ taskText }} pending": "You have {{ inOverDue }} overdue {{ taskText }} pending", 
+  "You have {{ inOverDue }} overdue {{ taskText }} pending": "You have {{ inOverDue }} overdue {{ taskText }} pending",
   "You must have your database credentials available in order to continue.": "You must have your database credentials available in order to continue.",
   "Your account has been timed out for security.": "Your account has been timed out for security.",
   "Your password has been reset!": "Your password has been reset!",
