--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -41,6 +41,7 @@
   "All Rights Reserved": "All Rights Reserved",
   "All the configurations of the screen will be exported.": "All the configurations of the screen will be exported.",
   "Allow Reassignment": "Allow Reassignment",
+  "Allows the Task assignee to reassign this Task": "Allows the Task assignee to reassign this Task",
   "Allowed Group": "Allowed Group",
   "Allowed Groups": "Allowed Groups",
   "Allowed User": "Allowed User",
@@ -69,7 +70,7 @@
   "as": "as",
   "Assign all permissions to this group": "Assign all permissions to this group",
   "Assign all permissions to this user": "Assign all permissions to this user",
-  "Assign by Expression": "Assign by Expression",
+  "Assign by Expression: Use a rule to assign this Task conditionally": "Assign by Expression: Use a rule to assign this Task conditionally",
   "Assign Call Activity": "Assign Call Activity",
   "Assign Start Event": "Assign Start Event",
   "Assign task": "Assign task",
@@ -136,7 +137,7 @@
   "Completed": "Completed",
   "completed": "completed",
   "Computed Properties": "Computed Properties",
-  "Configuration JSON for the script task": "Configuration JSON for the script task",
+  "Enter the JSON to configure the Script": "Enter the JSON to configure the Script",
   "Configuration": "Configuration",
   "Configure Process": "Configure Process",
   "Configure Screen": "Configure Screen",
@@ -310,6 +311,7 @@
   "Export Screen": "Export Screen",
   "Export": "Export",
   "Expression": "Expression",
+  "Enter the expression to evaluate Task assignment": "Enter the expression to evaluate Task assignment",
   "F": "F",
   "Failed to connect to MySQL database. Ensure the database exists. Check your credentials and try again.": "Failed to connect to MySQL database. Ensure the database exists. Check your credentials and try again.",
   "Fax": "Fax",
@@ -624,7 +626,8 @@
   "Script Configuration": "Script Configuration",
   "Script Source": "Script Source",
   "Script Task": "Script Task",
-  "Script that will be executed by the task": "Script that will be executed by the task",
+  "Select the Script this element runs": "Select the Script this element runs",
+  "Select who may start a Request of this Process": "Select who may start a Request of this Process",
   "Script": "Script",
   "Scripts": "Scripts",
   "Search...": "Search...",
@@ -638,6 +641,7 @@
   "Select allowed users": "Select allowed users",
   "Select direction of gateway": "Select direction of gateway",
   "Select Direction": "Select Direction",
+  "Select Display-type Screen to show the summary of this Request when it completes": "Select Display-type Screen to show the summary of this Request when it completes",
   "select file": "select file",
   "Select List": "Select List",
   "Select group or type here to search groups": "Select group or type here to search groups",
@@ -682,11 +686,12 @@
   "success": "success",
   "Successfully imported": "Successfully imported",
   "Successfully saved": "Successfully saved",
-  "Summary screen that will be displayed when process finish with this End event.": "Summary screen that will be displayed when process finish with this End event.",
+  "Summary screen": "Summary screen",
   "Summary": "Summary",
   "T": "T",
   "Table": "Table",
   "Task Assignment": "Task Assignment",
+  "Select the Task assignee": "Select the Task assignee",
   "Task Assignments (API)": "Task Assignments (API)",
   "Task Completed Successfully": "Task Completed Successfully",
   "Task Notifications": "Task Notifications",
@@ -972,16 +977,15 @@
   "Warnings": "Warnings",
   "no warnings to report": "No Warnings To Report",
   "Assignment Rules": "Assignment Rules",
-  "Enable Interstitial": "Enable Interstitial",
+  "Display Next Assigned Task to Task Assignee": "Display Next Assigned Task to Task Assignee",
   "redirected to my next assigned task": "redirected to my next assigned task",
-  "Hours until the task is due": "Hours until the task is due",
+  "Enter the hours until this Task is overdue": "Enter the hours until this Task is overdue",
   "You must select at least one day.": "You must select at least one day.",
   "Listen For Message": "Listen For Message",
   "The Name of the Boundary Event": "The Name of the Boundary Event",
   "Message Name": "Message Name",
   "The Name of the Intermediate Message Event": "The Name of the Intermediate Message Event",
   "Sass compile completed": "Sass compile completed",
-  "Select List": "Select List",
   "Title": "Title",
   "No results.": "No results.",
   "Display": "Display",
