Apply suggestions from code review

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -645,6 +645,7 @@
   "select file": "select file",
   "Select List": "Select List",
   "Select group or type here to search groups": "Select group or type here to search groups",
+  "Select Screen to display this Task": "Select Screen to display this Task",
   "Select the Script this element runs": "Select the Script this element runs",
   "Select who may start a Request of this Process": "Select who may start a Request of this Process",
   "Select user or type here to search users": "Select user or type here to search users",
@@ -979,7 +980,7 @@
   "Warnings": "Warnings",
   "no warnings to report": "No Warnings To Report",
   "Assignment Rules": "Assignment Rules",
-  "redirected to my next assigned task": "redirected to my next assigned task",
+  "Directs Task assignee to the next assigned Task": "Directs Task assignee to the next assigned Task",
   "You must select at least one day.": "You must select at least one day.",
   "Listen For Message": "Listen For Message",
   "The Name of the Boundary Event": "The Name of the Boundary Event",
