Added missing translations. Deleted a few removed/renamed translations.

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -48,7 +48,6 @@
   "Allowed Users": "Allowed Users",
   "An error occurred. Check the form for errors in red text.": "An error occurred. Check the form for errors in red text.",
   "and click on +Process to get started.": "and click on +Process to get started.",
-  "Annotation Description": "Annotation Description",
   "API Tokens": "API Tokens",
   "Archive Processes": "Archive Processes",
   "Archive": "Archive",
@@ -121,7 +120,9 @@
   "Choose logo image": "Choose logo image",
   "City": "City",
   "Clear Color Selection": "Clear Color Selection",
+  "Click After to enter how many occurrences to end the timer control": "Click After to enter how many occurrences to end the timer control",
   "Click on the color value to use the color picker.": "Click on the color value to use the color picker.",
+  "Click On to select a date": "Click On to select a date",
   "Click the browse button below to get started": "Click the browse button below to get started",
   "Client ID": "Client ID",
   "Client Secret": "Client Secret",
@@ -291,10 +292,14 @@
   "Ends": "Ends",
   "English (US)": "English (US)",
   "Enter how many seconds the Script runs before timing out (0 is unlimited).": "Enter how many seconds the Script runs before timing out (0 is unlimited).",
+  "Enter the error name that is unique from all other elements in the diagram": "Enter the error name that is unique from all other elements in the diagram",
   "Enter the expression that describes the workflow condition": "Enter the expression that describes the workflow condition",
   "Enter the expression to evaluate Task assignment": "Enter the expression to evaluate Task assignment",
   "Enter the hours until this Task is overdue": "Enter the hours until this Task is overdue",
+  "Enter the id that is unique from all other elements in the diagram": "Enter the id that is unique from all other elements in the diagram",
   "Enter the JSON to configure the Script": "Enter the JSON to configure the Script",
+  "Enter the message name that is unique from all other elements in the diagram": "Enter the message name that is unique from all other elements in the diagram",
+  "Enter the name of this element": "Enter the name of this element",
   "Enter your email address and we'll send you a reset link.": "Enter your email address and we'll send you a reset link.",
   "Enter your MySQL database name:": "Enter your MySQL database name:",
   "Enter your MySQL host:": "Enter your MySQL host:",
@@ -307,6 +312,7 @@
   "Errors": "Errors",
   "Event has multiple event definitions": "Event has multiple event definitions",
   "Event-based Gateway": "Event-based Gateway",
+  "Event Based Gateway": "Event Based Gateway",
   "Exclusive Gateway": "Exclusive Gateway",
   "Expires At": "Expires At",
   "Export Process": "Export Process",
@@ -475,6 +481,7 @@
   "New Select": "New Select",
   "New Sequence Flow": "New Sequence Flow",
   "New Submit": "New Submit",
+  "New Sub Process": "New Sub Process",
   "New Task": "New Task",
   "New Text Annotation": "New Text Annotation",
   "New Text": "New Text",
@@ -488,6 +495,7 @@
   "no problems to report": "no problems to report",
   "No relevant data": "No relevant data",
   "No Results": "No Results",
+  "Node Identifier": "Node Identifier",
   "None": "None",
   "Normal": "Normal",
   "Not Authorized": "Not Authorized",
@@ -530,7 +538,6 @@
   "Phone": "Phone",
   "Placeholder Text": "Placeholder Text",
   "Placeholder": "Placeholder",
-  "Please click On to select a date": "Please click On to select a date",
   "Please contact your administrator to get started.": "Please contact your administrator to get started.",
   "Please log in to continue your work on this page.": "Please log in to continue your work on this page.",
   "Please visit the Processes page": "Please visit the Processes page",
@@ -575,7 +582,7 @@
   "Reassign": "Reassign",
   "Record Form": "Record Form",
   "Record List": "Record List",
-  "Recurring loop will repeat at time interval set below": "Recurring loop will repeat at time interval set below",
+  "Recurring loop repeats at time interval set below": "Recurring loop repeats at time interval set below",
   "Redirect URL": "Redirect URL",
   "Redirect": "Redirect",
   "Redo": "Redo",
@@ -639,18 +646,24 @@
   "Select allowed groups": "Select allowed groups",
   "Select allowed user": "Select allowed user",
   "Select allowed users": "Select allowed users",
-  "Select direction of gateway": "Select direction of gateway",
   "Select Direction": "Select Direction",
   "Select Display-type Screen to show the summary of this Request when it completes": "Select Display-type Screen to show the summary of this Request when it completes",
   "select file": "select file",
+  "Select from which Intermediate Message Throw or Message End event to listen": "Select from which Intermediate Message Throw or Message End event to listen",
   "Select List": "Select List",
   "Select group or type here to search groups": "Select group or type here to search groups",
   "Select Screen to display this Task": "Select Screen to display this Task",
   "Select the Script this element runs": "Select the Script this element runs",
+  "Select the date to trigger this element": "Select the date to trigger this element",
+  "Select the day(s) of the week in which to trigger this element": "Select the day(s) of the week in which to trigger this element",
+  "Select the direction of workflow for this element": "Select the direction of workflow for this element",
+  "Select the duration of the timer": "Select the duration of the timer",
+  "Select to interrupt the current Request workflow and route to the alternate workflow, thereby preventing parallel workflow" : "Select to interrupt the current Request workflow and route to the alternate workflow, thereby preventing parallel workflow",
   "Select who may start a Request of this Process": "Select who may start a Request of this Process",
   "Select user or type here to search users": "Select user or type here to search users",
   "Select...": "Select...",
   "Select": "Select",
+  "Set the periodic interval to trigger this element again": "Set the periodic interval to trigger this element again",
   "Sequence flow is missing condition": "Sequence flow is missing condition",
   "Sequence Flow": "Sequence Flow",
   "Server Error - ProcessMaker": "Server Error - ProcessMaker",
@@ -680,6 +693,7 @@
   "State or Region": "State or Region",
   "Status": "Status",
   "statuses": "statuses",
+  "Sub Process": "Sub Process",
   "Sub process has multiple blank start events": "Sub process has multiple blank start events",
   "Sub process is missing end event": "Sub process is missing end event",
   "Sub process is missing start event": "Sub process is missing start event",
@@ -706,6 +720,7 @@
   "Text Content": "Text Content",
   "Text Horizontal Alignment": "Text Horizontal Alignment",
   "Text Label": "Text Label",
+  "Text to Show": "Text to Show",
   "Text Vertical Alignment": "Text Vertical Alignment",
   "Text": "Text",
   "Textarea": "Textarea",
@@ -734,31 +749,18 @@
   "The group was deleted.": "The group was deleted.",
   "The HTML text to display": "The HTML text to display",
   "The id field should be unique across all elements in the diagram, ex. id_1.": "The id field should be unique across all elements in the diagram, ex. id_1.",
-  "The id field should be unique across all elements in the diagram": "The id field should be unique across all elements in the diagram",
   "The label describes the button's text": "The label describes the button's text",
   "The label describes the field's name": "The label describes the field's name",
   "The label describes the fields name": "The label describes the fields name",
   "The label describes this record list": "The label describes this record list",
   "The name of the button": "The name of the button",
-  "The Name of the Call Activity": "The Name of the Call Activity",
   "The Name of the data name": "The Name of the data name",
   "The name of the Download": "The name of the Download",
-  "The Name of the End Event": "The Name of the End Event",
   "The Name of the Gateway": "The Name of the Gateway",
   "The name of the group for the checkbox. All checkboxes which share the same name will work together.": "The name of the group for the checkbox. All checkboxes which share the same name will work together.",
   "The name of the image": "The name of the image",
-  "The Name of the Intermediate Event": "The Name of the Intermediate Event",
-  "The Name of the Intermediate Message Catch Event": "The Name of the Intermediate Message Catch Event",
-  "The Name of the Lane": "The Name of the Lane",
-  "The name of the manual task": "The name of the manual task",
-  "The Name of the Message Flow": "The Name of the Message Flow",
   "The name of the new page to add": "The name of the new page to add",
-  "The Name of the Pool": "The Name of the Pool",
   "The Name of the Process": "The Name of the Process",
-  "The name of the script task": "The name of the script task",
-  "The Name of the Sequence Flow": "The Name of the Sequence Flow",
-  "The Name of the Start Event": "The Name of the Start Event",
-  "The Name of the Task": "The Name of the Task",
   "The name of the upload": "The name of the upload",
   "The Name of the variable": "The Name of the variable",
   "The new name of the page": "The new name of the page",
@@ -811,7 +813,6 @@
   "This screen will be populated once the Request is completed.": "This screen will be populated once the Request is completed.",
   "This window will automatically close when complete.": "This window will automatically close when complete.",
   "Time expression": "Time expression",
-  "Time when the task will due (hours)": "Time when the task will due (hours)",
   "Time Zone": "Time Zone",
   "Time": "Time",
   "Timeout": "Timeout",
@@ -983,9 +984,7 @@
   "Directs Task assignee to the next assigned Task": "Directs Task assignee to the next assigned Task",
   "You must select at least one day.": "You must select at least one day.",
   "Listen For Message": "Listen For Message",
-  "The Name of the Boundary Event": "The Name of the Boundary Event",
   "Message Name": "Message Name",
-  "The Name of the Intermediate Message Event": "The Name of the Intermediate Message Event",
   "Sass compile completed": "Sass compile completed",
   "Title": "Title",
   "No results.": "No results.",
