Add translation strings for default value inspector setting in screen builder

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1042,5 +1042,7 @@
   "Edit Screen Categories": "Edit Screen Categories",
   "Create Screen Categories": "Create Screen Categories",
   "Delete Screen Categories": "Delete Screen Categories",
-  "View Screen Categories": "View Screen Categories"
+  "View Screen Categories": "View Screen Categories",
+  "Default Value": "Default Value",
+  "Takes precedence over value set in data.": "Takes precedence over value set in data."
 }
